# agile_flight

./: README.md  komutlar.sh  setup_custom.bash  setup_ros.bash
envtest/: CMakeLists.txt  evaluation_config.yaml  package.xml  rl_example.py  run_competition.py  setup.py  summary.yaml  test_debug.py  user_code.py
envtest/launch/: command.launch
envtest/python/: run_agile_ppo.py  run_imitation_bc.py  run_imitation_bc_v1.py  run_imitation_dagger.py  run_imitation_lstm.py  run_vision_ppo.py  test_dagger.py
envtest/python/imitation/data/: rollout.py
envtest/src/envtest/: 0.21.0  utils_agile.py
imitation-lstm/: bc.py  policies.py
